--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -32,6 +32,7 @@
     "tsconfig-paths-webpack-plugin": "^2.0.0",
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
+    "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
