--- a/client/.gitignore
+++ b/client/.gitignore
@@ -2,8 +2,6 @@
 
 # dependencies
 /node_modules
-vendor/
-src/public/
 
 # testing
 /coverage
@@ -22,5 +20,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-:w
-\\
+# Ignore css.d.ts
+*css.d.ts
+vendor/
