--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.4",
+    "@types/redux-devtools-extension": "^2.13.2",
     "autoprefixer": "7.1.6",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -44,6 +45,7 @@
     "tsconfig-paths-webpack-plugin": "^2.0.0",
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
+    "typescript-language-server": "^0.1.9",
     "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
