--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.4",
+    "@types/react-svg": "^2.2.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "autoprefixer": "7.1.6",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -21,7 +22,7 @@
     "jest": "20.0.4",
     "jwt-decode": "^2.2.0",
     "localforage": "^1.5.7",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.8.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -34,6 +35,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-svg": "^2.2.15",
     "redux": "^3.7.2",
     "redux-persist": "^5.9.1",
     "reselect": "^3.0.1",
