--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/es6-promise": "^3.3.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.4",
