--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/es6-promise": "^3.3.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/react-helmet": "^5.0.5",
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.4",
     "@types/react-svg": "^2.2.0",
@@ -34,6 +35,7 @@
     "react-css-modules": "^4.7.1",
     "react-dev-utils": "4.2.1",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-svg": "^2.2.15",
