Configure for stricter linter for ts

--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "ts-loader": "^2.3.7",
     "tsconfig-paths-webpack-plugin": "^2.0.0",
     "tslint": "^5.9.1",
+    "tslint-config-airbnb": "^5.8.0",
     "tslint-react": "^3.5.1",
     "typescript-language-server": "^0.1.9",
     "typings-for-css-modules-loader": "^1.7.0",
