--- a/client/package.json
+++ b/client/package.json
@@ -68,7 +68,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "dependencies": "bash scripts/dependencies.sh"
   },
   "devDependencies": {
     "@types/jest": "^22.1.3",
