--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-css-modules": "^4.7.1",
     "react-dev-utils": "4.2.1",
     "react-dom": "^16.2.0",
+    "react-focus-trap": "^2.5.0",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
