--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/react-svg": "^2.2.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "autoprefixer": "7.1.6",
+    "awesome-typed-sass-modules": "^1.0.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
@@ -67,8 +68,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start": "./node_modules/awesome-typed-sass-modules/lib/cli.js -c -p **/*.scss src && node scripts/start.js",
+    "build": "./node_modules/awesome-typed-sass-modules/lib/cli.js -c -p **/*.scss src && node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "dependencies": "bash scripts/dependencies.sh"
   },
