Add ability to add task

--- a/client/.stylelintrc.json
+++ b/client/.stylelintrc.json
@@ -8,7 +8,8 @@
   ],
   "rules": {
       "indentation": 4,
-
-      "selector-pseudo-class-no-unknown": ["global"]
+      "selector-pseudo-class-no-unknown": [true, {
+            "ignorePseudoClasses": ["global"]
+      }]
   }
 }
