--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/memoize-one": "^3.1.1",
     "immutability-helper": "^2.6.5",
     "jwt-decode": "^2.2.0",
     "localforage": "^1.7.1",
+    "memoize-one": "^4.0.2",
     "object-assign": "4.1.1",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
@@ -47,7 +49,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.9.3",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "raf": "3.4.0",
