--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,12 @@
     "react-router-dom": "^4.2.2",
     "react-svg": "^2.2.15",
     "redux": "^3.7.2",
-    "redux-persist": "^5.9.1",
+    "redux-persist": "5.9.1",
     "reselect": "^3.0.1",
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "@togglecorp/ravl": "^1.0.2",
     "@types/es6-promise": "^3.3.0",
     "@types/jest": "^22.1.3",
     "@types/jwt-decode": "^2.2.1",
@@ -68,8 +69,8 @@
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.8.0",
     "tslint-react": "^3.5.1",
-    "typescript": "^2.7.2",
-    "typescript-language-server": "^0.1.9",
+    "typescript": "^3.0.3",
+    "typescript-language-server": "^0.3.0",
     "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
