Add absolute imports for react-store

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,15 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "paths": {
+      "#rsca/*": ["src/vendor/react-store/components/Action/*"],
+      "#rscg/*": ["src/vendor/react-store/components/General/*"],
+      "#rsci/*": ["src/vendor/react-store/components/Input/*"],
+      "#rscv/*": ["src/vendor/react-store/components/View/*"],
+      "#rscz/*": ["src/vendor/react-store/components/Visualization/*"],
+      "#rsu/*": ["src/vendor/react-store/utils/*"],
+      "#rsk/*": ["src/vendor/react-store/constants/*"]
+    },
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
