--- a/production.yml
+++ b/production.yml
@@ -12,6 +12,7 @@ services:
           context: ./server/
           cache_from:
             - devtc/chrono:server-latest
+            # - devtc/chrono:server-prod-0.1
         env_file:
             - .env
         volumes:
