--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,5 +8,6 @@ psycopg2==2.7.3
 pyjwt==1.5.3
 requests==2.18.4
 django-filter==1.0.4
-pytest==3.4.1
 django-storages==1.5.2
+django-autofixture==0.12.1
+pytest-django==3.4.1
