--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@togglecorp/react-rest-request": "^1.0.9",
     "@types/memoize-one": "^3.1.1",
     "immutability-helper": "^2.6.5",
     "jwt-decode": "^2.2.0",
