--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@togglecorp/react-rest-request": "2.0.0",
     "@types/memoize-one": "^3.1.1",
-    "immutability-helper": "^2.6.5",
+    "immutability-helper": "2.7.1",
     "jwt-decode": "^2.2.0",
     "localforage": "^1.7.1",
     "memoize-one": "^4.0.2",
@@ -23,16 +24,17 @@
     "redux": "^3.7.2",
     "redux-persist": "5.9.1",
     "reselect": "^3.0.1",
+    "resize-observer-polyfill": "^1.5.1",
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
-    "@togglecorp/ravl": "^1.0.2",
+    "@togglecorp/ravl": "^1.1.0",
     "@types/es6-promise": "^3.3.0",
-    "@types/jest": "^22.1.3",
+    "@types/jest": "^23.3.12",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^9.4.6",
-    "@types/react": "^16.0.38",
-    "@types/react-dom": "^16.0.4",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.5",
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.4",
@@ -50,7 +52,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.11.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "raf": "3.4.0",
@@ -126,6 +128,9 @@
         "tsConfigFile": "/home/water/client-ts/tsconfig.test.json"
       }
     }
+  },
+  "resolutions": {
+    "@types/react": "^16.7.18"
   },
   "eslintConfig": {
     "extends": "react-app"
