--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@togglecorp/react-rest-request": "2.0.0",
-    "@types/memoize-one": "^3.1.1",
+    "@togglecorp/ravl": "^1.1.0",
+    "@togglecorp/react-rest-request": "^2.0.4",
+    "hoist-non-react-statics": "^3.3.0",
     "immutability-helper": "2.7.1",
     "jwt-decode": "^2.2.0",
     "localforage": "^1.7.1",
@@ -28,7 +29,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
-    "@togglecorp/ravl": "^1.1.0",
+    "@types/hoist-non-react-statics": "^3.0.1",
+    "@types/memoize-one": "^3.1.1",
     "@types/es6-promise": "^3.3.0",
     "@types/jest": "^23.3.12",
     "@types/jwt-decode": "^2.2.1",
@@ -71,8 +73,8 @@
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.8.0",
     "tslint-react": "^3.5.1",
-    "typescript": "^3.0.3",
-    "typescript-language-server": "^0.3.0",
+    "typescript": "^3.2.4",
+    "typescript-language-server": "^0.3.7",
     "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
