--- a/production.yml
+++ b/production.yml
@@ -2,22 +2,25 @@ version: '3.2'
 
 services:
     db:
-        image: postgres:9.6
-        volumes:
-            - ./postgres-data:/var/lib/postgresql/data
+      image: postgres:9.6
+      environment:
+        # IMPORTANT: Remove this on production
+        - POSTGRES_HOST_AUTH_METHOD=trust
+      volumes:
+          - ./postgres-data:/var/lib/postgresql/data
 
     server:
-        image: devtc/chrono:server-prod-0.1
-        build:
-          context: ./server/
-          cache_from:
-            - devtc/chrono:server-latest
-            # - devtc/chrono:server-prod-0.1
-        env_file:
-            - .env
-        volumes:
-            - ./media:/media
-        ports:
-            - '80:80'
-        depends_on:
-            - db
+      image: devtc/chrono:server-prod-0.2
+      build:
+        context: ./server/
+        cache_from:
+          - devtc/chrono:server-latest
+          # - devtc/chrono:server-prod-0.1
+      env_file:
+          - .env
+      volumes:
+          - ./media:/media
+      ports:
+          - '80:80'
+      depends_on:
+          - db
