--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 before_install:
     - sudo pip install --upgrade awscli
     - sudo pip install --upgrade awsebcli --ignore-installed PyYAML
+    - sudo python -m easy_install --upgrade pyOpenSSL
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
     - mkdir -p client/src/vendor
@@ -16,7 +17,17 @@ before_install:
     - git --git-dir=client/src/vendor/react-store/.git --no-pager show --pretty=fuller --quiet
     - cp client/src/vendor/react-store/stylesheets/_user-imports-sample.scss client/src/vendor/react-store/stylesheets/_user-imports.scss
 
-    - env > .env
+    - echo "
+      AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+      AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+      CHRONO_API_END=$CHRONO_API_END
+      CHRONO_HTTPS=$CHRONO_HTTPS
+      CHRONO_RC_BRANCH=$CHRONO_RC_BRANCH
+      CHRONO_S3_BUCKET=$CHRONO_S3_BUCKET
+      DEPLOYMENT_REGION=$DEPLOYMENT_REGION
+      DOCKER_PASSWORD=$DOCKER_PASSWORD
+      DOCKER_USERNAME=$DOCKER_USERNAME
+      " > .env
     - docker pull devtc/chrono:server-latest; docker build --cache-from devtc/chrono:server-latest --tag devtc/chrono:server-latest ./server/
     - docker pull devtc/chrono:client-latest; docker build --cache-from devtc/chrono:client-latest --tag devtc/chrono:client-latest ./client/
 
