--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,12 +1,16 @@
-django-cors-headers==2.1.0
-boto3==1.4.4
-django==2.0.2
-djangorestframework-camel-case==0.2.0
-djangorestframework==3.7.7
-drf-dynamic-fields==0.2.0
-psycopg2==2.7.3
-pyjwt==1.5.3
-requests==2.18.4
-django-filter==1.0.4
-pytest==3.4.1
-django-storages==1.5.2
+Django==3.2.3
+PyJWT==2.1.0
+boto3
+boto3==1.17.84
+django-cors-headers==3.7.0
+django-filter==2.4.0
+django-storages==1.11.1
+djangorestframework-camel-case==1.2.0
+djangorestframework==3.12.4
+drf-dynamic-fields==0.3.1
+drf-writable-nested==0.6.3
+psycopg2-binary==2.8.6
+
+pytest
+requests
+uWSGI
