Fix client build issue
- Fix post upgrade issues.

--- a/.env-sample
+++ b/.env-sample
@@ -6,7 +6,7 @@ S3_AWS_ACCESS_KEY_ID=
 S3_AWS_SECRET_ACCESS_KEY=
 
 HTTP_PROTOCOL=
-CHRONO_FRONTEND_HOST=
+CHRONO_FRONTEND_HOST=http://localhost:3000
 CHRONO_SITE_NAME=
 
 DJANGO_SECRET_KEY=
