--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,7 @@
     "@types/react-svg": "^2.2.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "autoprefixer": "7.1.6",
-    "awesome-typed-sass-modules": "https://github.com/tnagorra/awesome-typed-sass-modules",
+    "awesome-typed-sass-modules": "https://github.com/Feiyang1/awesome-typed-sass-modules#c95a75825867d7247078b0ce7f9f48f7100139af",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
@@ -50,7 +50,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "node-sass": "^4.13.0",
+    "node-sass": "^6.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "raf": "3.4.0",
