--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,24 @@
-FROM python:3.9-slim-buster
+FROM python:3.10-slim-buster
 
 LABEL maintainer="dev@togglecorp.com"
 
 ENV PYTHONUNBUFFERED=1
 
 RUN apt-get update \
-    && apt-get install -y gettext vim git gcc
+    && apt-get install -y gettext vim git gcc libpq-dev
 
 WORKDIR /code
 
-COPY ./Pipfile ./Pipfile.lock /code/
+COPY pyproject.toml poetry.lock /code/
 
-RUN pip install --upgrade pip pipenv --no-cache-dir \
-    && pipenv install --system --deploy
+# Upgrade pip and install python packages for code
+RUN pip install --upgrade --no-cache-dir pip poetry \
+    && poetry --version \
+    # Configure to use system instead of virtualenvs
+    && poetry config virtualenvs.create false \
+    && poetry install --no-root \
+    # Remove installer
+    && pip uninstall -y poetry virtualenv-clone virtualenv
 
 COPY . /code/
 
