--- a/server/mypy.ini
+++ b/server/mypy.ini
@@ -1,4 +1,5 @@
 [mypy]
+mypy_path = ./apps/
 plugins = mypy_django_plugin.main, graphene_plugin, mypy_drf_plugin.main
 
 [mypy.plugins.django-stubs]
