--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -25,8 +25,10 @@ graphene-django-extras = "0.4.9"
 graphene-file-upload = "1.2.2"
 graphene-graphiql-explorer = "0.0.1"
 django-enumfield = "^2.0.2"
+factory-boy = "*"
 
 [tool.poetry.dev-dependencies]
+pytest-django = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
